# awfan

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE-1.1.4-TEMP  SECURITY.md  configure-private-updates.ps1  install.cmd  install.ps1  update-manifest.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml  config.yml  feature_request.yml
.github/workflows/: cleanup-merged-branches.yml  finalize-1.2.0-state.yml  finalize-1.2.0-updater.yml  fix-1.2.0-build.yml  fix-1.2.0-sources.yml  native-probe.yml  native-release.yml  prepare-1.1.4.yml  source-snapshot.yml  verify-release-1.1.4.yml
docs/: .keep-hotfix  ARCHITECTURE.md  COMPATIBILITY.md  LEGACY.md  PLATFORM-1.2.md  TROUBLESHOOTING.md  UPDATING.md
native/: CLI.md  CMakeLists.txt  README.md
native/include/awfan/: awcc_exact.hpp  awcc_raw.hpp  awcc_read.hpp  broker.hpp  native_cli.hpp  platform_features.hpp  update.hpp  wmi_probe.hpp
native/package/: CHANGELOG.txt  README.txt  THIRD-PARTY-NOTICES.txt  UPDATER-NOTES.txt  awfan-completion.ps1  install.ps1  uninstall.ps1  update-transaction.ps1  update.ps1
native/src/: awcc_exact.cpp  awcc_inspect.cpp  awcc_raw.cpp  awcc_raw_v2.cpp  awcc_raw_v3.cpp  awcc_read.cpp  awcc_read_v2.cpp  awcc_read_v3.cpp  broker.cpp  broker_main.cpp  cli_main.cpp  frontend_main.cpp  main.cpp  native_cli.cpp  native_cli_release.cpp  native_cli_v2.cpp  platform_features.cpp  update.cpp  wmi_probe.cpp
src/: awfan-broker.ps1  awfan-updater.ps1  awfan.ps1
